src/objects/Page__c.object
<CustomObject>
    <fields>
        <fullName>Assistance_Text__c</fullName>
        <label>Assistance Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carousel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sliding Image</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must look up to a Carousel.</errorMessage>
            <filterItems>
                <field>Content__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Carousel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Pages</relationshipLabel>
        <relationshipName>Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clean_URL__c</fullName>
        <label>URL Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collaborate_Text__c</fullName>
        <label>Collaborate Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collaboration_Group__c</fullName>
        <inlineHelpText>Please enter the name of the Group that you want to link to</inlineHelpText>
        <label>Collaboration Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Atom</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You cannot select a Carousel for this content.</errorMessage>
            <filterItems>
                <field>Content__c.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Carousel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Pages</relationshipLabel>
        <relationshipName>Home_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The description tag is a good way to provide a concise, human-readable summary of each page’s content</description>
        <inlineHelpText>The description tag is a good way to provide a concise, human-readable summary of each page’s content (search engines may choose to use this over their automated results)</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Title__c</fullName>
        <description>Search Engines use titles, users a quick insight into the content of a result and why it’s relevant. Will be displayed on the browser tab and on visual search results.</description>
        <inlineHelpText>Search Engines use titles, users a quick insight into the content of a result and why it’s relevant. Will be displayed on the browser tab and on visual search results.</inlineHelpText>
        <label>Page Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>Template_Page__c</referenceTo>
        <relationshipLabel>Pages</relationshipLabel>
        <relationshipName>Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pop_Up_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Govdelivery Subscription Pop Up active</description>
        <inlineHelpText>Govdelivery Subscription Pop Up active</inlineHelpText>
        <label>Pop-Up Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pop_Up_Script__c</fullName>
        <description>Govdelivery Subscription Pop Up</description>
        <inlineHelpText>Govdelivery Subscription Pop Up</inlineHelpText>
        <label>Pop-Up Script</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Content_Link_Text__c</fullName>
        <label>Secondary Content Link Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Content_Link__c</fullName>
        <label>Secondary Content Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Content</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Pages (Secondary Content)</relationshipLabel>
        <relationshipName>Secondary_Blocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MicroSite</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Pages</relationshipLabel>
        <relationshipName>Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Pages</relationshipLabel>
        <relationshipName>Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tertiary_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>tertiary</description>
        <label>Tertiary Content</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Pages (Tertiary Content)</relationshipLabel>
        <relationshipName>Tertiary_Blocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trade_Events__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade Events</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Pages (Trade Events)</relationshipLabel>
        <relationshipName>Events_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update_Frequency__c</fullName>
        <label>Update Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>always</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>never</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pageURL__c</fullName>
        <description>The URL to the site of the current page</description>
        <formula>&quot;https://&quot;+Site__r.Domain__c+ Clean_URL__c</formula>
        <inlineHelpText>The URL to the site of the current page</inlineHelpText>
        <label>Public URL</label>
        <type>Text</type>
    </fields>
    <label>Page</label>
    <listViews>
        <fullName>Export</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Page__c</columns>
        <columns>pageURL__c</columns>
        <columns>Site__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site__c</field>
            <operation>equals</operation>
            <value>Export.gov</value>
        </filters>
        <label>Export.gov</label>
    </listViews>
    <listViews>
        <fullName>SelectUSA_Pages</fullName>
        <columns>NAME</columns>
        <columns>pageURL__c</columns>
        <columns>Clean_URL__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site__c</field>
            <operation>equals</operation>
            <value>SelectUSA</value>
        </filters>
        <label>SelectUSA Pages</label>
    </listViews>
    <listViews>
        <fullName>Stopfakes</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site__c</field>
            <operation>equals</operation>
            <value>STOPfakes</value>
        </filters>
        <label>Stopfakes</label>
        <sharedTo>
            <role>System_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Susa</fullName>
        <columns>NAME</columns>
        <columns>Content__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Page__c</columns>
        <columns>pageURL__c</columns>
        <columns>Site__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site__c</field>
            <operation>equals</operation>
            <value>SelectUSA</value>
        </filters>
        <label>SUSA</label>
    </listViews>
    <nameField>
        <label>Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pages</pluralLabel>
    <recordTypes>
        <fullName>GenericPage</fullName>
        <active>true</active>
        <description>You can do anything with this page style.</description>
        <label>Generic Page</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>